# autonomous_agent

./: README.md  config.yaml  main.py  pyproject.toml  requirements.txt
core/: __init__.py  action.py  cognition.py  loop.py  perception.py  state.py
data/: episodic_memory.json
environment/: __init__.py  base.py  simulated.py
environment/scenarios/: __init__.py  task_orchestration.py
llm/: __init__.py  client.py  prompts.py
logs/: agent_trace.jsonl
memory/: __init__.py  episodic_memory.py  memory_manager.py  working_memory.py
models/: __init__.py  action.py  decision.py  feedback.py  observation.py
utils/: __init__.py  config_loader.py  logger.py
