[project]
name = "autonomous-agent"
version = "1.0.0"
description = "Autonomous Decision-Making Agent with Real-Time Perception → Cognition → Action Loop"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.30.0",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
]

[project.scripts]
autonomous-agent = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
